apps/realstate-scrapper/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realstate-scrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realstate-scrapper
  template:
    metadata:
      labels:
        app: realstate-scrapper
    spec:
      containers:
        - name: realstate-scrapper
          image: registry.fullstack.pw/library/realstate-scrapper:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
