apps/realstate-scrapper/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realstate-scrapper
spec:
  selector:
    app: realstate-scrapper
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
